--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="style.css"> -->
-    <title>corebi-ui-vue</title>
+    <title>Corebi Analytics</title>
   </head>
   <body>
     <div id="app"></div>
